[webui+model] suite avec les matchs, fonctionnel mais pas terminé
sauvegarde et récupération de match/score/equipe fonctionnelle